# nova

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
docs/: DESIGN_SPEC.md
docs/superpowers/plans/: 2026-03-16-nova-v0.1.md
scripts/: convert_head.py  create_head.py  generate_holo_head_anime.py
src/: constants.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/llm/: client.rs  mod.rs  personality.rs  router.rs
src-tauri/src/system/: applescript.rs  info.rs  mod.rs  workspace.rs
src-tauri/src/voice/: tts.rs
src/assets/models/: holo_head.glb
src/renderer/: ambient.js  animation.js  head.js  particles.js  scene.js  tracking.js
src/shaders/: fallback.frag  holo.frag  holo.vert  particle.frag  particle.vert  wire.frag  wire.vert
src/styles/: main.css
src/ui/: chat.js  hud.js
